<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_detail"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:paddingLeft="@dimen/margin_regular"
      android:paddingRight="@dimen/margin_regular"
      >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_regular"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:padding="@dimen/margin_regular"
          >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_regular"
            android:text="@string/txt_title_quick_info"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_regular"
            />
        <TextView
            android:id="@+id/txtIsbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_regular"
            android:text="@string/txt_placeholder_isbn"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_tall"
            />
        <TextView
            android:id="@+id/txtIssueNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_regular"
            android:text="@string/txt_placeholder_issue"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_tall"
            />
        <TextView
            android:id="@+id/txtFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_regular"
            android:text="@string/txt_placeholder_format"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_tall"
            />
        <TextView
            android:id="@+id/txtPageCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_regular"
            android:text="@string/txt_placeholder_pages"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_tall"
            />
      </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/lay_card_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_regular"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:padding="@dimen/margin_regular"
          >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_regular"
            android:text="@string/txt_title_description"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_regular"
            />
        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_regular"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_tall"
            tools:text="txtDescription"
            />
      </LinearLayout>
    </android.support.v7.widget.CardView>
  </LinearLayout>
</android.support.v4.widget.NestedScrollView>